--- a/css/game.css
+++ b/css/game.css
@@ -12,7 +12,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 1);
   font-size: 1.2rem;
   font-weight: bold;
   border-radius: 5px;
@@ -47,7 +47,7 @@ header {
   position: absolute;
   background-size: cover;
   background-position: center;
-  border: 2px solid #8d9f4b;
+  border: 2px solid palevioletred;
   border-radius: 5px;
   transition: all 400ms ease;
 }
